# flood-control-dashboard

./: .gitignore  .jupyter_ystore.db  .pre-commit-config.yaml  README.md  app.py  killflask.sh  matrix.ipynb  projects.ipynb  pyproject.toml  risk_level.ipynb
data/: dpwh_flood_control_projects.csv  province_list.csv  province_risk_levels.csv
data/scripts/: matrix.py  projects.py  risk_level.py
data/shapefiles/: Cavite_Flood_5year.shx  Cavite_Flood_5year.xml
routes/: basic.py  city.py  data.py  projects.py  province.py  regions.py  render.py
static/css/: flood_control_projects.css  init.css  layout.css  list.css  map.css  project_stats.css  province_stats.css  regional_stats.css  style.css
static/js/: chart.js  data.js  dropdown.js  script.js
templates/: base.html  city_stats.html  flood_control_projects.html  index.html  map.html  project_stats.html  province_stats.html  regional_stats.html
